--- a/bio.html
+++ b/bio.html
@@ -13,160 +13,165 @@
     <script src="/js/all.js"></script>
   </head>
   <body>
-    <section class="bio_section">
-      <div class="container-fluid bio">
-        <!-- nav bar  -->
+    <section class="section">
+      <!-- nav bar  -->
 
-        <nav class="navbar navbar-expand-lg">
-          <a class="navbar-brand AJ" href="/index.html"
-            ><h3 class="text-center text-light">Nana A.J</h3></a
-          >
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-toggle="collapse"
-            data-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <i class="fa-solid fa-bars hamburgerBars"></i>
-          </button>
-          <div class="collapse navbar-collapse nav_links" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item single_link">
-                <a class="nav-link" href="/index.html">Home</a>
-              </li>
-              <li class="nav-item single_link">
-                <a class="nav-link" href="/news.html">News</a>
-              </li>
-              <!-- <li class="nav-item single_link">
+      <nav class="navbar fixed-top my-nav navbar-expand-lg w-100">
+        <a class="navbar-brand AJ" href="/index.html"
+          ><h3 class="text-center text-light">Nana A.J</h3></a
+        >
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <i class="fa-solid fa-bars hamburgerBars"></i>
+        </button>
+        <div class="collapse navbar-collapse nav_links" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item single_link">
+              <a class="nav-link" href="/index.html">Home</a>
+            </li>
+            <li class="nav-item single_link">
+              <a class="nav-link" href="/news.html">News</a>
+            </li>
+            <!--  <li class="nav-item single_link">
                 <a class="nav-link" href="#">Music</a>
               </li> -->
-              <li class="nav-item single_link">
-                <a class="nav-link" href="/index.html#videos">Videos</a>
-              </li>
-              <li class="nav-item single_link">
-                <a class="nav-link" href="/bio.html">Bio</a>
-              </li>
-              <li class="nav-item single_link">
-                <a class="nav-link" href="/tour.html">Tour</a>
-              </li>
-              <li class="nav-item single_link">
-                <a class="nav-link" href="/contact.html">Contact</a>
-              </li>
-            </ul>
-            <div class="nav_socials ml-auto">
-              <a
-                target="blank"
-                href="https://soundcloud.com/nana-a-j/sets/train-of-thought"
-                ><i class="fa-brands fa-soundcloud px-1"></i
-              ></a>
-              <a target="blank" href="https://www.facebook.com/atotheflippingj/"
-                ><i class="fab fa-facebook-f px-1"></i
-              ></a>
-              <a target="blank" href="https://www.instagram.com/nana_a.j/"
-                ><i class="fab fa-instagram px-1"></i
-              ></a>
-              <a
-                target="blank"
-                href="https://twitter.com/atotheflippingj?s=20&t=jgDe3BM8MflcevUmnfSs5w"
-                ><i class="fab fa-twitter px-1"></i
-              ></a>
-              <a
-                target="blank"
-                href="https://open.spotify.com/artist/1NKZ7szc37Mlo5wTwm2tHA?si=mohAOJDFQXqSiMkhDFVI7g"
-                ><i class="fa-brands fa-spotify px-1"></i
-              ></a>
-              <a
-                target="blank"
-                href="https://www.youtube.com/playlist?list=OLAK5uy_kKdgIi68Smtyjd8GrEc-jrad3q2kf5Q6s"
-                ><i class="fab fa-youtube px-1"></i
-              ></a>
-            </div>
-          </div>
-        </nav>
-        <!-- end of nav bar  -->
-        <div class="row bio_sec">
-          <div class="col-md-6 mx-auto">
-            <h1 class="text-left text-light">Biography</h1>
+            <li class="nav-item single_link">
+              <a class="nav-link" href="/index.html#videos">Videos</a>
+            </li>
+            <li class="nav-item single_link">
+              <a class="nav-link" href="/bio.html">Bio</a>
+            </li>
+            <li class="nav-item single_link">
+              <a class="nav-link" href="/tour.html">Tour</a>
+            </li>
+            <li class="nav-item single_link">
+              <a class="nav-link" href="/contact.html">Contact</a>
+            </li>
+          </ul>
+          <div class="nav_socials ml-auto">
+            <a
+              target="blank"
+              href="https://soundcloud.com/nana-a-j/sets/train-of-thought"
+              ><i class="fa-brands fa-soundcloud px-1"></i
+            ></a>
+            <a target="blank" href="https://www.facebook.com/atotheflippingj/"
+              ><i class="fab fa-facebook-f px-1"></i
+            ></a>
+            <a target="blank" href="https://www.instagram.com/nana_a.j/"
+              ><i class="fab fa-instagram px-1"></i
+            ></a>
+            <a
+              target="blank"
+              href="https://twitter.com/atotheflippingj?s=20&t=jgDe3BM8MflcevUmnfSs5w"
+              ><i class="fab fa-twitter px-1"></i
+            ></a>
+            <a
+              target="blank"
+              href="https://open.spotify.com/artist/1NKZ7szc37Mlo5wTwm2tHA?si=mohAOJDFQXqSiMkhDFVI7g"
+              ><i class="fa-brands fa-spotify px-1"></i
+            ></a>
+            <a
+              target="blank"
+              href="https://www.youtube.com/playlist?list=OLAK5uy_kKdgIi68Smtyjd8GrEc-jrad3q2kf5Q6s"
+              ><i class="fab fa-youtube px-1"></i
+            ></a>
           </div>
         </div>
-      </div>
-    </section>
-    <section class="contact_form">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-sm-12 col-md-6">
-            <p>
-              Nana A.J is a Berlin based Rap artist and producer from Accra,
-              Ghana (West Africa). His music inspires and encourages. His genre
-              fusion of Gospel, Hip Hop & Afrobeat is an artistic expression of
-              who he is. <br /><br />
-              Nana A.J embarked on his musical career as a teenager, releasing a
-              couple of songs under his former stage name A.J. At a point in
-              time, he realized he wanted to use his impact to make a positive
-              change in the lives of people. Refusing to follow the trends of
-              this world, he elevated his songwriting and birthed something
-              special.
-              <br /><br />
-              His EPs “On The Low” and “Train of Thought” have been making waves
-              ever since their release and are doing very well on online music
-              platforms.
-              <br />
-              <br />
-              As a passionate and energizing performer, Nana A.J is set to take
-              Rap music to a different level with his life changing music, that
-              speaks directly to the soul.
-            </p>
-          </div>
-        </div>
-        <div class="col-md-6"></div>
-      </div>
-    </section>
-    <section class="footer">
-      <div class="container">
-        <div class="row">
-          <div class="col text-center">
-            <div class="footer_socials">
-              <a
-                target="blank"
-                href="https://soundcloud.com/nana-a-j/sets/train-of-thought"
-                ><i class="fa-brands fa-soundcloud px-1"></i
-              ></a>
-              <a target="blank" href="https://www.facebook.com/atotheflippingj/"
-                ><i class="fab fa-facebook-f px-1"></i
-              ></a>
-              <a target="blank" href="https://www.instagram.com/nana_a.j/"
-                ><i class="fab fa-instagram px-1"></i
-              ></a>
-              <a
-                target="blank"
-                href="https://twitter.com/atotheflippingj?s=20&t=jgDe3BM8MflcevUmnfSs5w"
-                ><i class="fab fa-twitter px-1"></i
-              ></a>
-              <a
-                target="blank"
-                href="https://open.spotify.com/artist/1NKZ7szc37Mlo5wTwm2tHA?si=mohAOJDFQXqSiMkhDFVI7g"
-                ><i class="fa-brands fa-spotify px-1"></i
-              ></a>
-              <a
-                target="blank"
-                href="https://www.youtube.com/playlist?list=OLAK5uy_kKdgIi68Smtyjd8GrEc-jrad3q2kf5Q6s"
-                ><i class="fab fa-youtube px-1"></i
-              ></a>
+      </nav>
+      <!-- end of nav bar  -->
+      <section class="bio_section">
+        <div class="container-fluid bio">
+          <div class="row">
+            <div class="col-md-6 mx-auto bio_sec">
+              <h1 class="text-left text-light">Biography</h1>
             </div>
           </div>
         </div>
-        <div class="row">
-          <div class="col text-center">
-            <p>© Nana A.J 2022</p>
+      </section>
+      <section class="contact_form">
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="col-sm-12 col-md-6">
+              <p>
+                Nana A.J is a Berlin based Rap artist and producer from Accra,
+                Ghana (West Africa). His music inspires and encourages. His
+                genre fusion of Gospel, Hip Hop & Afrobeat is an artistic
+                expression of who he is. <br /><br />
+                Nana A.J embarked on his musical career as a teenager, releasing
+                a couple of songs under his former stage name A.J. At a point in
+                time, he realized he wanted to use his impact to make a positive
+                change in the lives of people. Refusing to follow the trends of
+                this world, he elevated his songwriting and birthed something
+                special.
+                <br /><br />
+                His EPs “On The Low” and “Train of Thought” have been making
+                waves ever since their release and are doing very well on online
+                music platforms.
+                <br />
+                <br />
+                As a passionate and energizing performer, Nana A.J is set to
+                take Rap music to a different level with his life changing
+                music, that speaks directly to the soul.
+              </p>
+            </div>
+          </div>
+          <div class="col-md-6"></div>
+        </div>
+      </section>
+      <section class="footer">
+        <div class="container">
+          <div class="row">
+            <div class="col text-center">
+              <div class="footer_socials">
+                <a
+                  target="blank"
+                  href="https://soundcloud.com/nana-a-j/sets/train-of-thought"
+                  ><i class="fa-brands fa-soundcloud px-1"></i
+                ></a>
+                <a
+                  target="blank"
+                  href="https://www.facebook.com/atotheflippingj/"
+                  ><i class="fab fa-facebook-f px-1"></i
+                ></a>
+                <a target="blank" href="https://www.instagram.com/nana_a.j/"
+                  ><i class="fab fa-instagram px-1"></i
+                ></a>
+                <a
+                  target="blank"
+                  href="https://twitter.com/atotheflippingj?s=20&t=jgDe3BM8MflcevUmnfSs5w"
+                  ><i class="fab fa-twitter px-1"></i
+                ></a>
+                <a
+                  target="blank"
+                  href="https://open.spotify.com/artist/1NKZ7szc37Mlo5wTwm2tHA?si=mohAOJDFQXqSiMkhDFVI7g"
+                  ><i class="fa-brands fa-spotify px-1"></i
+                ></a>
+                <a
+                  target="blank"
+                  href="https://www.youtube.com/playlist?list=OLAK5uy_kKdgIi68Smtyjd8GrEc-jrad3q2kf5Q6s"
+                  ><i class="fab fa-youtube px-1"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col text-center">
+              <p>© Nana A.J 2022</p>
+            </div>
           </div>
         </div>
-      </div>
+      </section>
     </section>
 
     <script src="/js/jquery-3.6.0.min.js"></script>
     <script src="/js/bootstrap.bundle.js"></script>
+    <script src="/scrollNav.js"></script>
   </body>
 </html>
